Made UI better, Redux Directory Fixed, Added Components of Home Page Better, Mapped out the API enpoints on the products page, Routing Completed

--- a/src/App.css
+++ b/src/App.css
@@ -15,10 +15,6 @@
 }
 
 .navbar, .footer{
-    background-color: #2b2d42;
-    color: #ffffff;
-}
-
-body{
-    background-color: #819595;
+    background-color: #001b37;
+    color: #b3d8ff;
 }
