--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,36 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
-*{
-    font-family: "Open Sans", sans-serif;
+* {
+  font-family: "Open Sans", sans-serif;
 }
 
-.product-card{
-    height: 30rem;
-    width: 22rem;
+.product-card {
+  height: 27rem;
+  width: 20rem;
 }
 
-.navbar{
-    font-family: 'Roboto', sans-serif;
+.navbar {
+  font-family: "Roboto", sans-serif;
 }
 
-.navbar, .footer{
-    background-color: #001b37;
-    color: #b3d8ff;
+.navbar,
+.footer {
+  background-color: #001b37;
+  color: #b3d8ff;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.loader {
+  animation: spin 1s linear infinite;
+  border-top: 5px solid #001b37;
+  border: 5px solid #b3d8ff;
 }
