--- a/src/App.css
+++ b/src/App.css
@@ -20,17 +20,26 @@
   color: #b3d8ff;
 }
 
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
+.loader {
+  position: fixed;
+  z-index: 9999;
+  left: 50%;
+  top: 50%;
+  width: 50px;
+  height: 50px;
+  margin: -50px 0 0 -50px;
+  border: 6px solid #b3d8ff;
+  border-top: 6px solid #001b37;
+  border-radius: 50%;
+  animation: spin 2s linear infinite;
 }
 
-.loader {
-  animation: spin 1s linear infinite;
-  border-top: 5px solid #001b37;
-  border: 5px solid #b3d8ff;
+@keyframes spin {
+  0% {
+      transform: rotate(0deg);
+  }
+
+  100% {
+      transform: rotate(360deg);
+  }
 }
