--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,16 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Short+Stack&display=swap');
 
 * {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Outfit", sans-serif;
 }
 
 .product-card {
   height: 27rem;
   width: 20rem;
 }
-
-.navbar {
-  font-family: "Roboto", sans-serif;
+.logo{
+  font-family: "Alfa Slab One", serif;;
 }
 
 .navbar,
@@ -36,10 +35,56 @@
 
 @keyframes spin {
   0% {
-      transform: rotate(0deg);
+    transform: rotate(0deg);
   }
 
   100% {
-      transform: rotate(360deg);
+    transform: rotate(360deg);
   }
+}
+
+.bc {
+  border: 2px solid red;
+}
+
+.form-group {
+  margin-bottom: 1rem;
+}
+
+.input,
+.textarea {
+  width: 100%;
+  padding: 0.75rem;
+  border: 1px solid #cccccc;
+  border-radius: 4px;
+  font-size: 1rem;
+  outline: none;
+  transition: border-color 0.3s;
+}
+
+.input:focus,
+.textarea:focus {
+  border-color: #003772;
+}
+
+.button {
+  margin-top: 20px;
+  width: 100%;
+  padding: 0.75rem;
+  background-color: #003772;
+  color: rgb(243, 241, 255);
+  font-weight: bold;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.button:hover {
+  background-color: #255385;
+}
+
+.error {
+  color: red;
+  margin: 10px 0px;
 }
