Changed Font Scheme for Entire Website, Made Font Size Adjustments, Adjusted Hover Cart Position, Responsive Issue Resolved for Product View Page, Made few minor UI tweaks Implementing Skeleton Loading for Product View Page

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 body {
+  font-family: "Open Sans", sans-serif;
+}
+
+.raleway{
   font-family: "Raleway", sans-serif;
 }
 
@@ -13,10 +17,6 @@ body {
 
 .roboto{
   font-family: 'Roboto', sans-serif;
-}
-
-.opensans{
-  font-family: "Open Sans", sans-serif;
 }
 
 .product-card {
