backend setup for serving products from endpoint 1 and endpoint 2 and serving users info

--- a/backend/views/home.ejs
+++ b/backend/views/home.ejs
@@ -50,10 +50,12 @@
 </head>
 
 <body>
-    <div class="message">
+    <a target="_top" href="/" class="message">
         Welcome to Nextron Electronics Backend!
-    </div>
-    <a target="_top" href="/users">Users Endpoint</a>
+    </a>
+    <a target="_top" href="api/users">Users Endpoint</a>
+    <a target="_top" href="api/products/1">Products Endpoint - 1</a>
+    <a target="_top" href="api/products/2">Products Endpoint - 2</a>
 </body>
 
 </html>
