fixing backend api serving issues

--- a/backend/views/home.ejs
+++ b/backend/views/home.ejs
@@ -50,12 +50,12 @@
 </head>
 
 <body>
-    <a target="_top" href="/" class="message">
+    <a target="_blank" href="/" class="message">
         Welcome to Nextron Electronics Backend!
     </a>
-    <a target="_top" href="api/users">Users Endpoint</a>
-    <a target="_top" href="api/products/1">Products Endpoint - 1</a>
-    <a target="_top" href="api/products/2">Products Endpoint - 2</a>
+    <a target="_blank" href="api/users">Users Endpoint</a>
+    <a target="_blank" href="api/products/1">Products Endpoint - 1</a>
+    <a target="_blank" href="api/products/2">Products Endpoint - 2</a>
 </body>
 
 </html>
