pagination and products in a range logic added

--- a/backend/views/home.ejs
+++ b/backend/views/home.ejs
@@ -57,8 +57,8 @@
         Welcome to Nextron Electronics Backend!
     </a>
     <a target="_blank" href="api/users">Users Endpoint</a>
-    <a target="_blank" href="api/products/1">Products Endpoint - 1</a>
-    <a target="_blank" href="api/products/2">Products Endpoint - 2</a>
+    <a target="_blank" href="api/products">Products (Optional: Page and Limit Query Params)</a>
+    <a target="_blank" href="api/products/range">Products in a Range</a>
 </body>
 
 </html>
