removed redundant endpoint from routes

--- a/backend/views/home.ejs
+++ b/backend/views/home.ejs
@@ -57,8 +57,7 @@
         Welcome to Nextron Electronics Backend!
     </a>
     <a target="_blank" href="api/users">Users Endpoint</a>
-    <a target="_blank" href="api/products">Products (Optional: Page and Limit Query Params)</a>
-    <a target="_blank" href="api/products/range">Products in a Range</a>
+    <a target="_blank" href="api/products">Products (Query Params: limit, page, minId, maxId)</a>
 </body>
 
 </html>
